Oops…fix text alignment on second line

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<br> <!-- Kian - quick note: adding line breaks via <br> is a lame way to do it. A better way would be to set the margin-top to, say, 20px. See below -->
 		<div style="color:gray"> <!--Delete the <br> tags and change "color:gray" to "color:gray;margin-top:50px" -->
 			<p align=center>My name is Kian...</p>
-			<p>i'm a ninja, and my codez r watching u.</p>
+			<p align=center>i'm a ninja, and my codez r watching u.</p>
 		</div>
 	</body>
 </html>
